--- a/style.css
+++ b/style.css
@@ -55,7 +55,37 @@ body {
     font-family: 'Dancing Script', cursive;
     font-size: 2rem;
     letter-spacing: 1px;
-    
+}
+
+.nav-collapse {
+    position: fixed;
+    top: 6.4rem; right: 0;
+    display: flex;
+    flex-direction:column;
+    height: 15rem;
+    width: 12rem;
+    padding: 1rem 2rem;
+    background-color: #282d30;
+    opacity: 0.7;
+    display: none;
+}
+
+.nav-collapse .nav-item {
+    text-align: start;
+    margin: 1rem;
+    color: #f5f5f5;
+    text-decoration: none;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.nav-collapse .nav-item:hover {
+    color: #ebd6c2;
+    transition: .4s ease-in-out;
+}
+
+.show-nav {
+    display:flex
 }
 
 main {
