--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     font-weight: bold;
 }
 
-.navbar .menu:active i {
+.navbar .menu:hover i {
     transform: rotate(180deg);
     transition: .4s all;
 }
